[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/playing_scene/playing_scene.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/offline/playing_scene.gd" type="Script" id=3]

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.752941, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=20]
gradient = SubResource( 17 )
fill_to = Vector2( 0, 1 )

[sub_resource type="Gradient" id=19]
offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.752941, 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=21]
gradient = SubResource( 19 )
fill_to = Vector2( 0, 1 )

[sub_resource type="DynamicFont" id=22]
size = 80
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=23]
size = 140
outline_size = 5
font_data = ExtResource( 1 )

[node name="OfflinePlayingScene" type="Node"]
script = ExtResource( 3 )

[node name="PlayingScene" parent="." instance=ExtResource( 2 )]

[node name="Panel" type="CanvasLayer" parent="."]
layer = 10

[node name="ResultOverlap" type="Control" parent="Panel"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="RivalVeil" type="TextureRect" parent="Panel/ResultOverlap"]
anchor_right = 1.0
margin_bottom = 192.0
mouse_filter = 2
texture = SubResource( 20 )
expand = true

[node name="MyVeil" type="TextureRect" parent="Panel/ResultOverlap"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -192.0
mouse_filter = 2
texture = SubResource( 21 )
expand = true

[node name="ReturnButton" type="Button" parent="Panel/ResultOverlap"]
margin_left = 240.0
margin_top = 576.0
margin_right = 1040.0
margin_bottom = 701.0
custom_fonts/font = SubResource( 22 )
text = "Return Title"

[node name="ResultLabel" type="Label" parent="Panel/ResultOverlap"]
margin_left = 256.0
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 240.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 23 )
text = "Win"
align = 1
valign = 1

[connection signal="ended" from="PlayingScene" to="." method="_on_PlayingScene_ended"]
[connection signal="pressed" from="Panel/ResultOverlap/ReturnButton" to="." method="_on_ReturnButton_pressed"]
